hphp/test/quick/func3.php.expectf
HipHop Fatal error: Can't use array() as base in write context in %s on line 4
